fix z-index and add the component correctly

--- a/src/scss/_ArtistImages.scss
+++ b/src/scss/_ArtistImages.scss
@@ -1,25 +1,47 @@
+ .artists {
+      margin-top: 6rem;
+      padding-inline: 2rem;
+      position: relative;
+
+      .artist-images + * {
+          margin-top: 6rem;
+      }
+ }
+ 
  .artist-images {
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(4, 2.5rem);
-    margin-top: 6rem;
+    position: relative;
 
-    .image {
-      height: 100%;
+    .artist-number {
+      font-family: 'Lato', sans-serif;
+      font-size: 3.5rem;
+      font-weight: 600;
+      grid-row: 4 / 6;
+      height: 3.5rem;
       overflow: hidden;
-      position: relative;
-      width: 100%;
 
-      img {
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-        -webkit-user-drag: none;
-        width: 100%;
+      span {
+        display: inline-block;
       }
 
-      &.image-landscape {
+
+      &[data-idx="1"] {
+        grid-column: 1 / 3;
+      }
+
+       &[data-idx="1"] {
+        grid-column: 9/ 11;
+      }
+    }
+
+    .container {
+      height: 100%;
+      width: 100%;
+
+       &.image-landscape {
         grid-row: 1 / 3;
       }
 
@@ -31,28 +53,50 @@
         grid-row: 1 / 5;
       }
 
-      &:nth-child(1) {
+      &:nth-child(2) {
         grid-column: 1 / 3;
       }
 
-      &:nth-child(2) {
+      &:nth-child(3) {
         grid-column: 3 / 5;
       }
 
-      &:nth-child(3) {
+      &:nth-child(4) {
         grid-column: 9 / 11;
       }
 
-      &:nth-child(4) {
+      &:nth-child(5) {
         grid-column: 11 / 13;
       }
 
-      &:nth-child(5) {
+      &:nth-child(6) {
         grid-column: 13 / 15;
       }
 
-      &:nth-child(6) {
+      &:nth-child(7) {
         grid-column: 15 / 17;
       }
+    }
+    
+
+    .image {
+      height: 100%;
+      overflow: hidden;
+      position: relative;
+      width: 100%;
+
+  
+
+     
+
+      img {
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        -webkit-user-drag: none;
+        width: 100%;
+      }
+
+     
     }
   }
