--- a/src/scss/_ArtistList.scss
+++ b/src/scss/_ArtistList.scss
@@ -3,9 +3,9 @@
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(4, 4rem);
     left: 0;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    pointer-events: none;
+    position: fixed;
+    top: 15.75rem;
     width: 100%;
   }
 
@@ -35,8 +35,10 @@
         border: none;
         color: inherit;
         cursor: pointer;
+        font-size: .75rem;
         font-weight: bold;
         min-width: max-content;
+        pointer-events: all;
         text-transform: uppercase;
         transition: color 0.25s ease-in-out;
       }
